--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 .p {
   background-image: url("image.jpg");
 }
+<link rel="stylesheet" href="2b.css">
 </style>
 </style>
 <link rel="stylesheet"href="style.css">
@@ -18,7 +19,7 @@
 <header class="header">
 <h1>MY WEBSITE </h1>
  </header>
-<img src="nitte.jpg"class="center">
+<img src="profile.png"class="center">
 </div>
 <BR>
 <h2>Sarthak Shetty</h2>
@@ -78,4 +79,3 @@
 </footer>
 </body>
 </html>
-
